wp2/t2.1/v2.0/demo/jenkins/.jen/jobs/diaspora_to_csv/builds/58/log
Started by user [8mha:////4IGVMtvk6iK1hwW+PI4nElqD5WuZBmgWM1foNK6n5D+9AAAAlx+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzuEgZu/dLi1CL9ovyMzBIAOOgHy8AAAAA=[0mrohit gupta
Running as SYSTEM
Building in workspace /var/jenkins_home/workspace/diaspora_to_csv
[diaspora_to_csv] $ /bin/sh -xe /tmp/jenkins6830394443019272226.sh
+ pip install pandas
Requirement already satisfied: pandas in /usr/local/lib/python3.9/dist-packages (1.4.3)
Requirement already satisfied: numpy>=1.18.5 in /usr/local/lib/python3.9/dist-packages (from pandas) (1.23.1)
Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.9/dist-packages (from pandas) (2022.1)
Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.9/dist-packages (from pandas) (2.8.2)
Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.9/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)
WARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv
+ python3 db_to_csv.py
  File "/var/jenkins_home/workspace/diaspora_to_csv/db_to_csv.py", line 72
    user = 'root',
    ^
SyntaxError: invalid syntax
Build step 'Execute shell' marked build as failure
Finished: FAILURE
